@@ -5,6 +5,7 @@ This file includes a list of high level updates for each milestone release.
 Milestone 103
 -------------
   * SkSamplingOptions now includes anisotropic filtering. Implemented on GPU only.
+  * SkBitmap::clear and SkBitmap::clearColor take in SkColor4fs
 
 * * *
 
